# flashcard-api

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 001_init.sql
src/: error.rs  main.rs  middleware.rs  models.rs
src/db/: collections.rs  flashcards.rs  mod.rs
src/handlers/: auth.rs  collections.rs  comments.rs  flashcards.rs  levels.rs  mod.rs  tags.rs
